--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.304",
     "react-router-dom": "^7.8.1",
+    "typewriter-effect": "^2.22.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
