mail sender added

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/vite": "^4.1.12",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
